Pull up following revision(s) (requested by jmcneill in ticket #576): 	sys/dev/video.c: revision 1.20 PR# kern/41008: possible simple mistake of field check in video(9) video_set_format() requires hw->set_format to be set, not get_format, from fukumoto@imasy.or.jp